# alterm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy-site.yml
alterm/: Cargo.toml
alterm/src/: main.rs
assets/: ascii_logo.txt
assets/icons/: README.md  alterm.icns
config/: default.toml  hooks.lua.example
crates/ai/: Cargo.toml
crates/ai/src/: anthropic.rs  gemini.rs  lib.rs  model_cache.rs  openai.rs
crates/browser/: Cargo.toml
crates/browser/src/: lib.rs  webview_manager.rs
crates/config/: Cargo.toml
crates/config/src/: hooks.rs  lib.rs  theme.rs
crates/gpu-renderer/: Cargo.toml
crates/gpu-renderer/src/: colors.rs  grid.rs  lib.rs  widget.rs
crates/gpu-renderer/tests/: color_test.rs
crates/preview/: Cargo.toml
crates/preview/src/: code.rs  image.rs  lib.rs  pptx.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: event.rs  lib.rs  pty.rs  term.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: ai_chat.rs  block.rs  chrome.rs  command_palette.rs  grid.rs  keybindings.rs  lib.rs  note.rs  session.rs  settings_panel.rs  sidebar.rs  tab.rs  tab_bar.rs
docs/superpowers/plans/: 2026-04-03-phase1-foundation.md  2026-04-04-phase2-workspace.md  2026-04-04-phase3-intelligence.md  2026-04-04-phase4-browser-preview.md  2026-06-17-balanced-grid-window-placement.md  2026-06-17-button-hotkey-tooltips.md  2026-06-18-session-persistence.md  2026-06-19-search-and-lua-hooks.md  2026-06-22-ai-model-list-quality.md  2026-06-22-ai-model-list-reliability.md  2026-06-22-note-pane.md
docs/superpowers/specs/: 2026-04-03-alterm-design.md  2026-04-03-altermative-design.md  2026-06-17-balanced-grid-window-placement-design.md  2026-06-17-button-hotkey-tooltips-design.md  2026-06-17-website-design.md  2026-06-18-session-persistence-design.md  2026-06-19-search-and-lua-hooks-design.md  2026-06-22-ai-model-list-quality-design.md  2026-06-22-ai-model-list-reliability-design.md  2026-06-22-note-pane-design.md
packaging/: build-release.sh  install.sh  uninstall.sh
packaging/common/: metadata.sh
packaging/linux/: alterm.desktop  altermative.desktop  build-portable.sh
packaging/linux/deb/: build-deb.sh  control
packaging/macos/: Info.plist.template  build-app.sh  build-pkg.sh
packaging/windows/: alterm.iss  build-installer.ps1
website/: .gitignore  astro.config.mjs  package-lock.json  package.json
website/src/components/: Footer.astro  Header.astro  TerminalDemo.astro
website/src/layouts/: BaseLayout.astro  DocsLayout.astro
website/src/lib/: site.ts
website/src/pages/: index.astro
website/src/pages/docs/: ai.astro  configuration.astro  index.astro  installation.astro  keybindings.astro
website/src/scripts/: motion.ts
website/src/styles/: global.css
