[workspace]
members = [
    "alterm",
    "crates/terminal",
    "crates/gpu-renderer",
    "crates/workspace",
    "crates/ai",
    "crates/config",
    "crates/preview",
    "crates/browser",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
iced = { version = "0.14", features = ["wgpu", "tokio", "canvas"] }
alacritty_terminal = "0.26.0-rc1"
portable-pty = "0.9"
cosmic-text = "0.18"
glyphon = "0.10"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
eventsource-stream = "0.2"
toml = "0.8"
dirs = "6"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

terminal = { path = "crates/terminal" }
gpu-renderer = { path = "crates/gpu-renderer" }
workspace = { path = "crates/workspace" }
ai = { path = "crates/ai" }
altermative-config = { path = "crates/config" }
browser = { path = "crates/browser" }
