[package]
name = "ai"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
