[package]
name = "workspace"
version = "0.2.0"
edition = "2021"

[dependencies]
terminal = { workspace = true }
gpu-renderer = { workspace = true }
ai = { workspace = true }
alterm-config = { workspace = true }
iced = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
browser = { workspace = true }
preview = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
